--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,12 +1,13 @@
 @import './variables';
+@import './reset';
 
 * {
   box-sizing: border-box;
-  transition: all .2s ease;
 }
 
 body {
   margin: 0;
+  transition: all 0.3s ease;
 }
 
 .page {
@@ -17,150 +18,6 @@ body {
 .container {
   max-width: 1024px;
   margin-inline: auto;
-}
-
-.package-options {
-  &__wrapper {
-    margin-top: 40px;
-    display: flex;
-    align-items:center;
-    justify-content: space-between;
-    position: relative;
-    margin-bottom: 160px;
-  }
-
-  &__boxing {
-    display: flex;
-    gap: 24px;
-  }
-
-  &__label {
-    cursor: pointer;
-    width: 252px;
-    transition: background-color 0.3s ease;
-    display: flex;
-    align-items:center;
-    justify-content: center;
-    gap: 8px;
-    gap: 8px;
-    color: $accent;
-    border: 2px solid #FF4200;
-    padding: 16px 32px;
-    border-radius: 50px;
-  }
-
-    &__choose {
-    font-size: 14px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-  }
-
-
-  &__icon {
-    width: 60px;
-    height: 60px;
-    background-repeat: no-repeat;
-  }
-  &__icon-package {
-    background-image: url('./assets/images/package.svg');
-  }
-
-  &__packs {
-    display: flex;
-    align-items: center;
-  }
-
-  &__button-container {
-    position: relative;
-    display: inline-block;
-  }
-
-  &__button {
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-  }
-
-  &__button-add-to-cart {
-    display: none;
-    position: absolute;
-    width: 230px;
-    height: 61px;
-
-    top: 0;
-    right: 0;
-
-    font-size: 20px;
-    padding: 18px 32px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    display: flex;
-    align-items:center;
-  }
-
-  &__krestik-wrapper {
-  display: flex;
-}
-
-  &__krestik {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  &__dropdown {
-    position: absolute;
-    top: 75px;
-    margin-left: 80px;
-    width: 250px;
-    border-radius: 18px;
-    box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-
-    display: none;
-    &.open {
-      display: block;
-    }
-  }
-
-
-  &__select-options {
-    margin: 10px 0;
-    padding: 0 12px;
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  
-  &__option {
-    cursor: pointer;
-    color: $accent;
-    padding: 12px;
-    width: 100%;
-    justify-content: center;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    display: flex;
-
-    &:hover {
-      background-color: $accent;
-      color: $main-text-color-white;
-    }
-
-    &.selected {
-      background-color: $accent;
-      color: $main-text-color-white;
-    }
-
-
-    &:not(:last-child) {
-      width: 100%;
-      border-bottom: 2px solid #ff4200;
-    }
-  }
 }
 
 .btn {
@@ -175,7 +32,7 @@ body {
   text-transform: uppercase;
 
   &:hover {
-    background-color: #E53B00;;
+    background-color: #e53b00;
   }
 
   &--taste-it {
@@ -192,53 +49,6 @@ body {
   &--add {
     width: 60px;
     height: 60px;
-    border-radius: 100px;
-    background-repeat: no-repeat;
-    background-image: url('./assets/images/normal.png');
   }
 }
 
-
-
-
-a {
-	text-decoration: none;
-  color: inherit;
-}
-
-ul,
-ol,
-li {
-	list-style: none;
-}
-
-img {
-	vertical-align: top;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	font-weight: inherit;
-	font-size: inherit;
-}
-
-html,
-body {
-	height: 100%;
-  line-height: 1;
-}
-button,
-input {
-  font-weight: inherit;
-  font-size: inherit;
-	font-family: inherit;
-	color: inherit;
-}
-button {
-  cursor: pointer;
-  background-color: inherit;
-}
