--- a/src/components/Cracker/CrackerConstructor/CrackerConstructor.scss
+++ b/src/components/Cracker/CrackerConstructor/CrackerConstructor.scss
@@ -81,3 +81,195 @@
     color: $main-text-color-dark;
   }
 }
+
+.package-options {
+  &__wrapper {
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    margin-bottom: 220px;
+  }
+
+  &__boxing {
+    display: flex;
+    gap: 24px;
+  }
+
+  &__label {
+    cursor: pointer;
+    width: 252px;
+    transition: background-color 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    gap: 8px;
+    color: $accent;
+    border: 2px solid #ff4200;
+    padding: 16px 32px;
+    border-radius: 50px;
+  }
+
+  &__choose {
+    font-size: 14px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+
+  &__icon {
+    width: 60px;
+    height: 60px;
+    background-repeat: no-repeat;
+  }
+  &__icon-package {
+    background-image: url('../../../assets/images/package-dark.svg');
+  }
+
+  &__packs {
+    display: flex;
+    align-items: center;
+  }
+
+  &__button-container {
+    position: relative;
+    display: inline-block;
+
+    :hover .package-options__button-add-to-cart {
+      animation: slideIn 0.3s ease;
+    }
+  }
+
+  &__button {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    transition: width 0.3s ease;
+
+    width: 100%;
+    transition: width 0.3s ease, opacity 0.3s ease;
+
+    &:hover {
+      width: 0;
+      opacity: 0;
+    }
+  }
+
+  &__button-add-to-cart {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 230px; 
+    height: 61px;
+    font-size: 20px;
+    padding: 18px 32px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    opacity: 0;
+
+    animation-delay: .5s;
+    transition: opacity 0.3s ease;
+
+    animation: fadeIn 0.3s ease;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+
+  &__icon-plus-wrapper {
+    display: flex;
+  }
+
+  &__icon-plus {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__dropdown {
+    position: absolute;
+    top: 75px;
+    margin-left: 80px;
+    width: 250px;
+    border-radius: 18px;
+    box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+
+    display: none;
+    &.open {
+      display: block;
+    }
+  }
+
+  &__select-options {
+    margin: 10px 0;
+    padding: 0 12px;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  &__option {
+    cursor: pointer;
+    color: $accent;
+    padding: 12px;
+    width: 100%;
+    justify-content: center;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    display: flex;
+
+    &:hover {
+      background-color: $accent;
+      color: $main-text-color-white;
+
+      &:hover:first-child {
+        color: #616161;
+        background-color: rgba(0, 0, 0, 0.1);
+      }
+    }
+    &.selected {
+      background-color: $accent;
+      color: $main-text-color-white;
+
+      &:first-child {
+        color: #616161;
+        background-color: rgba(0, 0, 0, 0.1);
+      }
+    }
+
+    &.disabled {
+      color: #9e9e9e;
+    }
+
+    &:not(:last-child) {
+      width: 100%;
+      border-bottom: 2px solid #ff4200;
+    }
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes slideIn {
+  from {
+    right: -230px;
+  }
+  to {
+    right: 0;
+  }
+}
+
