--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -53,6 +53,7 @@
 
   &__social-media {
     display: flex;
+    gap: 16px;
   }
 
   &__phone-boxing {
@@ -63,6 +64,11 @@
   &__media-wrapper {
     display: flex;
     flex-direction: column;
+    gap: 16px;
+  }
+
+  &__share-wrapper {
+    display: flex;
     gap: 16px;
   }
 
